Completed: Viewing chat history, send messages as player, mqtt TODO: Send messages as GM, recieve messages as player or GM

--- a/Paranoia.Client/appsettings.json
+++ b/Paranoia.Client/appsettings.json
@@ -12,5 +12,9 @@
         "Url": "http://0.0.0.0:5000"
       }
     }
+  },
+  "Message": {
+    "HostName": "localhost",
+    "Port": 1883
   }
 }
